--- a/src/StyleSheets/news.css
+++ b/src/StyleSheets/news.css
@@ -1,11 +1,14 @@
 @import url(../App.css);
 
+/* body {
+	background-color: #fff3f0;
+} */
 #headline {
 	font-family: var(--primaryFont);
 	font-weight: 800 !important;
 	margin-top: 1rem;
 	margin-bottom: 1rem;
-	text-shadow: 3px 10px 10px rgba(114, 114, 114, 0.8);
+	text-shadow: 3px 7px 12px rgba(114, 114, 114, 0.8);
 }
 
 .scrollTopBtn {
@@ -16,7 +19,7 @@
 	height: 4rem;
 	width: 4rem;
 	appearance: none;
-	background-color: #ffffff;
+	background-color: #fff3f0;
 	border-radius: 40em;
 	border-style: none;
 	box-shadow: #979797 0 -5px 6px inset;
