--- a/src/StyleSheets/newsCard.css
+++ b/src/StyleSheets/newsCard.css
@@ -8,12 +8,15 @@
 	box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
 		rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
 		rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+	background-color: #ffe9e2;
 }
 
 div > img {
 	max-height: 12rem;
 }
-
+#cardTitle {
+	font-family: var(--primaryFont);
+}
 .cardText {
 	max-width: 100%;
 	display: -webkit-box;
@@ -29,4 +32,15 @@ div > img {
 p > small {
 	font-size: 12px;
 	font-family: var(--secondaryFont);
+}
+
+.readBtn {
+	font-family: var(--secondaryFont);
+	border-radius: 0.6rem;
+	font-weight: 500;
+	background-color: transparent;
+	color: black;
+	border: none;
+	text-decoration: none;
+	margin: 15px 0px;
 }
